Cherry-pick bb685c487850. rdar://130987861

REGRESSION (iOS 17.6 beta): Hangs on realmahjongg.com and realcanasta.com (both Safari and WKWebView)
    https://bugs.webkit.org/show_bug.cgi?id=275852
    rdar://130531570

    Reviewed by Jer Noble.

    AudioBufferSourceNode::setBufferForBindings() was running on the main thread and
    acquiring first the graphLock and then the processLock. AudioBufferSourceNode::process()
    would then run on the audio thread and acquire the processLock first and then ref the
    AudioBufferSourceNode, which would acquire the graphLock. The reversed ordering in
    which the locks are acquired would mean that we could deadlock.

    * Source/WebCore/Modules/webaudio/AudioBufferSourceNode.cpp:
    (WebCore::AudioBufferSourceNode::setBufferForBindings):

    Canonical link: https://commits.webkit.org/272448.1101@safari-7618-branch

Canonical link: https://commits.webkit.org/280604@main